# WeatherBasedSimulationFramework

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CopyInstall DemoBioSIM.bat  CopyInstall.bat  DeleteTmp.bat  LICENSE  README.md  build-and-test.yml  readme.txt  vcpkg.json
wbs/: CMakeLists.txt
wbs/lib64/: lib will be here.txt
wbs/msvc/: Basic.vcxproj  Basic.vcxproj.filters  FileManager.vcxproj  FileManager.vcxproj.filters  Geomatic.vcxproj  Geomatic.vcxproj.filters  ModelBase.vcxproj  ModelBase.vcxproj.filters  RangerLib.vcxproj  Simulation.vcxproj  Simulation.vcxproj.filters  UI.vcxproj  UI.vcxproj.filters  UICommon.vcxproj  UICommon.vcxproj.filters  WeatherBaseSimulation.vcxproj  WeatherBaseSimulation.vcxproj.filters  WeatherBaseSimulationUI.vcxproj  WeatherBaseSimulationUI.vcxproj.filters  WeatherBasedSimulation.sln
wbs/src/: WeatherBasedSimulationString.h  WeatherBasedSimulationString.rc  WeatherBasedSimulationUI.h  WeatherBasedSimulationUI.rc  wbs_version.h
wbs/test/: ARModel_UnitTest.cpp  CMakeLists.txt  WBSF_UnitTest.cpp  WBSF_UnitTest.vcxproj  WBSF_UnitTest.vcxproj.filters
wbsModels/: AllModels.sln  CMakeLists.txt
wbsModels/ActiaInterrupta/: ActiaInterrupta.cpp  ActiaInterrupta.h  ActiaInterrupta.vcxproj  ActiaInterrupta.vcxproj.filters  ActiaInterruptaEquations.cpp  ActiaInterruptaEquations.h  ActiaInterruptaModel.cpp  ActiaInterruptaModel.h  CMakeLists.txt
wbsModels/ActiaInterrupta_OBL_SBW/: ActiaInterrupta_OBL_SBW.cpp  ActiaInterrupta_OBL_SBW.h  ActiaInterrupta_OBL_SBW.sln  ActiaInterrupta_OBL_SBW.vcxproj  ActiaInterrupta_OBL_SBW.vcxproj.filters  ActiaInterrupta_OBL_SBW_Model.cpp  ActiaInterrupta_OBL_SBW_Model.h  CMakeLists.txt
wbsModels/Agriculture/: CMakeLists.txt  Insect Development Database II.cpp  Insect Development Database II.h  Insect Development Database II.vcxproj  Insect Development Database III.cpp  Insect Development Database III.h  Insect Development Database III.vcxproj  MagareyInfection.cpp  MagareyInfection.h  MagareyInfection.vcxproj
wbsModels/AllenWave/: AllenWave.sln  AllenWave.vcxproj  AllenWaveModel.cpp  AllenWaveModel.h  CMakeLists.txt  HourlyGenerator.vcxproj  HourlyGeneratorModel.cpp  HourlyGeneratorModel.h
wbsModels/AprocerosLeucopoda/: ALeucopoda.cpp  ALeucopoda.h  ALeucopodaEquations.cpp  ALeucopodaEquations.h  ALeucopodaModel.cpp  ALeucopodaModel.h  CMakeLists.txt  Leucopoda.sln  Leucopoda.vcxproj  Leucopoda.vcxproj.filters
wbsModels/Bagworm/: Bagworm.cpp  Bagworm.h  BagwormModel.cpp  BagwormModel.h  BagwormModel.rc  BagwormModel.sln  BagwormModel.vcxproj  CMakeLists.txt  resource.h
wbsModels/Biophysical site indices (Ecoloap)/: Biophysical Site Indices (Ecoloap).cpp  Biophysical Site Indices (Ecoloap).h  Biophysical Site Indices (Ecoloap).sln  Biophysical Site Indices (Ecoloap).vcxproj  CMakeLists.txt
wbsModels/BlueStain/: BlueStain.sln  BlueStain.vcxproj  BlueStain.vcxproj.filters  BlueStainIndexModel.cpp  BlueStainIndexModel.h  BlueStainVariables.cpp  BlueStainVariables.h  BlueStainVariables.vcxproj  BlueStainVariablesModel.cpp  BlueStainVariablesModel.h  CMakeLists.txt  KNearestNeighbor.cpp  KNearestNeighbor.h
wbsModels/BudBurst/: BudBurst.cpp  BudBurst.h  BudBurst.sln  BudBurst.vcxproj  BudBurst.vcxproj.filters  BudBurstCharrier.cpp  BudBurstCharrier.h  BudBurstChuine.cpp  BudBurstChuine.h  BudBurstChuine.vcxproj  BudBurstSBW.vcxproj  BudBurstSBW.vcxproj.filters  BudBurstSBWHost.cpp  BudBurstSBWHost.h  BudBurstSBWHostModel.cpp  BudBurstSBWHostModel.h  BudBurstSaint-Amant.vcxproj  BudBurstSaintAmant.cpp  BudBurstSaintAmant.h  BudBurstUlmus.cpp  BudBurstUlmus.h  BudBurstUlmus.vcxproj  BudBurstUlmus.vcxproj.filters  CMakeLists.txt  PHENO_eqs.cpp  PHENO_eqs.h  ShootDevelopmentIndex.cpp  ShootDevelopmentIndex.h  ShootDevelopmentIndex.vcxproj
wbsModels/CIPRA/: CIPRA.sln  OignonMouche.cpp  OignonMouche.h  OignonMouche.vcxproj  OignonMouche.vcxproj.filters
wbsModels/Cankerworm/: Cankerworm.sln  CankerwormModel.cpp  CankerwormModel.h  CankerwormModel.vcxproj  CankerwormModels.vcxproj  Cankerworms.sln  CankerwormsModel.cpp  CankerwormsModel.h
wbsModels/Cankerworms/: CMakeLists.txt  Cankerworms.sln  FallCankerwormsModel.cpp  FallCankerwormsModel.h  FallCankerwormsModels.vcxproj  SpringCankerwormsModel.cpp  SpringCankerwormsModel.h  SpringCankerwormsModels.vcxproj
wbsModels/ClimateMoistureIndex/: CMIModel.cpp  CMIModel.h  CMIModel.sln  CMIModel.vcxproj  CMIModel.vcxproj.filters  CMakeLists.txt
wbsModels/Climatic/: ASCE-ET2005.vcxproj  ASCE-ETc.vcxproj  ASCE-ETsz.cpp  ASCE-ETsz.h  CCBioModel.cpp  CCBioModel.h  CCBioModel.vcxproj  CMakeLists.txt  CaroleCoursolle.cpp  CaroleCoursolle.h  CaroleCoursolle.vcxproj  ChillingDegreeDay.vcxproj  ChillingDegreeDayModel.cpp  ChillingDegreeDayModel.h  Climatic.cpp  Climatic.h  Climatic.sln  ClimaticFromTPOnly.cpp  ClimaticFromTPOnly.h  ClimaticFromTPOnly.vcxproj  ClimaticFull.cpp  ClimaticFull.h  ClimaticFull.vcxproj  ClimaticFull.vcxproj.filters  ClimaticMoistureDeficit.cpp  ClimaticMoistureDeficit.h  ClimaticMoistureDeficit.vcxproj  ClimaticQc.cpp  ClimaticQc.h  ClimaticQc.vcxproj  ClimaticQc.vcxproj.filters  ClimaticSB.cpp  ClimaticSB.h  ClimaticSB.vcxproj  ClimaticSB.vcxproj.filters  ClimaticWind.cpp  ClimaticWind.h  ClimaticWind.vcxproj  CornHeatUnits.vcxproj  CornHeatUnitsModel.cpp  (+64 more)
wbsModels/Climdex/: CMakeLists.txt  Climdex.sln  Climdex.vcxproj  ClimdexModel.cpp  ClimdexModel.h  ClimdexVariables.cpp  ClimdexVariables.h
wbsModels/CreateBioSIMDatabase/: CreateBioSIMNormals.mdl  MakeBioSIMNormalsModel.cpp  MakeBioSIMNormalsModel.h  MakeBioSIMNormalsModel.sln  MakeBioSIMNormalsModel.suo.old  MakeBioSIMNormalsModel.vcxproj  resource.h  stdafx.cpp  stdafx.h  targetver.h
wbsModels/EmeraldAshBorer/: CMakeLists.txt  EABIndividual.cpp  EABIndividual.h  EABIndividual.vcxproj  EABIndividual.vcxproj.filters  EABIndividualEquations.cpp  EABIndividualEquations.h  EABIndividualModel.cpp  EABIndividualModel.h  EmeraldAshBorer.cpp  EmeraldAshBorer.h  EmeraldAshBorer.sln  EmeraldAshBorer.vcxproj  EmeraldAshBorerColdHardiness.cpp  TreeMicroClimate.cpp  (+3 more)
wbsTools/: CMakeLists.txt
(+2428 files in other folders)
